# Neuro-MCP

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config-bazodiac.yaml  config-self.yaml  config.example.yaml  config.yaml  pyproject.toml
.obsidian/: app.json  graph.json
1-spec/: CLAUDE.spec.md  stakeholders.md
2-design/: api-design.md  architecture.md  data-model.md
3-code/: CLAUDE.code.md  tasks.md
decisions/: DEC-code-wins-source-of-truth.history.md  DEC-code-wins-source-of-truth.md  DEC-two-stage-mutations.history.md  DEC-two-stage-mutations.md
docs/: GUIDE.md  SYSTEMDOKU.de.md  neuro_transfer.md  verification.md
tests/: test_auto_frontmatter_enrich.py  test_auto_frontmatter_pipeline.py  test_auto_link_threshold.py  test_bearer_token_secret.py  test_config_validation.py  test_data_dir_permissions.py  test_decay_defaults_consistency.py  test_enrichment_marker.py  test_folder_type_map.py  test_freshness.py  test_frontmatter.py  test_frontmatter_crlf.py  test_gc_apply.py  test_gc_backup_collision.py  test_gc_execution.py  test_get_note.py  test_get_note_security.py  test_get_related.py  test_gomod_extraction.py  test_hybrid_embeddings.py  test_ingest.py  test_interference.py  test_interference_cap.py  test_interference_service.py  test_labile_auto_mark.py  test_pipeline_metrics.py  test_reconcile.py  test_reconsolidation.py  test_search.py  test_search_strict.py  test_server_tools.py  test_service_hybrid.py  test_service_thread_safety.py  test_status.py  test_stc_integration.py  test_storage_connection.py  test_symlink_safety.py  test_synaptic_tagging.py  (+8 more)
(+113 files in other folders)
