[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-mcp-server"
version = "0.1.0"
description = "Neuromorphic Second Brain MCP server with freshness, reconciliation, and semantic retrieval."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI"}]
dependencies = [
  "numpy>=1.26,<3",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "scikit-learn>=1.4,<2",
  "watchfiles>=0.21,<1",
]
keywords = ["mcp", "second-brain", "semantic-search", "knowledge", "vector-store"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.26,<2",
  "uvicorn>=0.30,<1",
  "starlette>=0.37,<1",
]
semantic = [
  "sentence-transformers>=3.0,<4",
]
dev = [
  "pytest>=8,<9",
]
all = [
  "neuro-mcp-server[mcp,semantic]",
]

[project.scripts]
neuro-mcp = "neuro_mcp.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
